# csosint

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  design-cpe-matching.md  design-nvd-sync.md  docker-compose.yml  pyproject.toml  specification
.github/workflows/: ci.yml
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/scan/[jobId]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AttackAnalysisView.tsx  GraphView.tsx  ReportView.tsx  ScanProgress.tsx
frontend/src/lib/: api.ts  types.ts
libs/common/: pyproject.toml
libs/common/src/csosint_common/: __init__.py  config.py  db.py  events.py  health.py  models.py  netguard.py  schemas.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_scan_snapshots.py  0003_exploitability_intel.py  0004_infrastructure_entities.py
services/collector_service/: Dockerfile  pyproject.toml
services/collector_service/src/collector_service/: __init__.py  celery_app.py  cpe.py  http.py  main.py  persistence.py  pipeline.py  progress.py  snapshot.py  types.py
services/collector_service/src/collector_service/sources/: __init__.py  censys.py  crtsh.py  dns_records.py  internetdb.py  rdap.py  securitytrails.py  shodan.py  virustotal.py
services/cve_service/: Dockerfile  pyproject.toml
services/cve_service/src/cve_service/: celery_app.py  cpe.py  main.py  threat_intel.py
services/cve_service/src/cve_service/matching/: __init__.py  aliases.py  matcher.py  product_map.py  repository.py  version.py
services/cve_service/src/cve_service/nvd/: __init__.py  client.py  parser.py  repository.py  sync.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: analyze.py  deep_analysis.py  graph.py  history.py  main.py  queue.py  ratelimit.py  report.py  risk.py  ws.py
tests/: test_analyze.py  test_collector_pipeline.py  test_collector_sources.py  test_cpe.py  test_deep_analysis.py  test_graph.py  test_health.py  test_matcher.py  test_nvd_client.py  test_nvd_parser.py  test_nvd_sync.py  test_progress.py  test_ratelimit.py  test_report_risk.py  test_scan_history.py  test_sources_endpoint.py  test_ssrf.py  test_threat_intel.py  test_version.py  test_ws.py
