[project]
name = "csosint-common"
version = "0.1.0"
description = "Общие для сервисов CSOSINT: конфиг, доступ к БД, модели, схемы, health"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csosint_common"]
