[project]
name = "collector-service"
version = "0.1.0"
description = "collector-service — пассивный сбор активов (InternetDB, CT, DNS/RDAP) (ТЗ §2.2, §4)"
requires-python = ">=3.12"
dependencies = [
    "csosint-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.3",
    "celery[redis]>=5.4",
    "dnspython>=2.6",
]

[tool.uv.sources]
csosint-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector_service"]
