[project]
name = "cve-service"
version = "0.1.0"
description = "cve-service — синк NVD и матчинг product+version→CVE (ТЗ §4.2, §6)"
requires-python = ">=3.12"
dependencies = [
    "csosint-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.3",
    "celery[redis]>=5.4",
    "alembic>=1.13",
    "univers>=30.11",
]

[tool.uv.sources]
csosint-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cve_service"]
