[project]
name = "gateway"
version = "0.1.0"
description = "API Gateway (BFF) — единая точка входа, оркестрация (ТЗ §2.2)"
requires-python = ">=3.12"
dependencies = [
    "csosint-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[tool.uv.sources]
csosint-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
